update swagger dan cek endpoint
